<resources>
    <string name="app_name">Registration App</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="phone">Phone :</string>
    <string name="school">School :</string>
    <string name="e_mail">E-mail :</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name :</string>
    <string name="last_name">Last Name</string>
    <string name="enter_school_name">Enter School Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="gender">Gender :</string>
    <string name="student_id">Student ID :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>